--- a/FPT_Learning_System.csproj
+++ b/FPT_Learning_System.csproj
@@ -2052,7 +2052,6 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Areas\Manager\Views\Trainer\Delete.cshtml" />
     <Content Include="Areas\Manager\Views\Trainer\Details.cshtml" />
     <Content Include="Areas\Manager\Views\Trainer\Index.cshtml" />
     <Content Include="Areas\Manager\Views\Trainer\Create.cshtml" />
@@ -2071,6 +2070,13 @@
     <Content Include="Areas\Manager\Views\Course\Index.cshtml" />
     <Content Include="Areas\Manager\Views\Trainee\Details.cshtml" />
     <Content Include="Areas\Manager\Views\TrainingStaff\Details.cshtml" />
+    <Content Include="Areas\Manager\Views\UserCourse\Create.cshtml" />
+    <Content Include="Areas\Manager\Views\UserCourse\Delete.cshtml" />
+    <Content Include="Areas\Manager\Views\UserCourse\Details.cshtml" />
+    <Content Include="Areas\Manager\Views\UserCourse\Edit.cshtml" />
+    <Content Include="Areas\Manager\Views\UserCourse\Index.cshtml" />
+    <Content Include="Areas\Manager\Views\Trainer\AssignTrainerToCourse.cshtml" />
+    <Content Include="Areas\Manager\Views\Trainee\AssignTraineeToCourse.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -2095,6 +2101,7 @@
     <Compile Include="Areas\Manager\Controllers\TraineeController.cs" />
     <Compile Include="Areas\Manager\Controllers\TrainerController.cs" />
     <Compile Include="Areas\Manager\Controllers\TrainingStaffController.cs" />
+    <Compile Include="Areas\Manager\Controllers\UserCourseController.cs" />
     <Compile Include="Areas\Manager\ManagerAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -2114,12 +2121,21 @@
     <Compile Include="Migrations\202108270822053_update course fk.Designer.cs">
       <DependentUpon>202108270822053_update course fk.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202108271507337_remove relationship  bw course and user.cs" />
+    <Compile Include="Migrations\202108271507337_remove relationship  bw course and user.Designer.cs">
+      <DependentUpon>202108271507337_remove relationship  bw course and user.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202108271522116_add relationship  bw course and user.cs" />
+    <Compile Include="Migrations\202108271522116_add relationship  bw course and user.Designer.cs">
+      <DependentUpon>202108271522116_add relationship  bw course and user.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\CourseCategory.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\UserCourse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -2340,6 +2356,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202108270822053_update course fk.resx">
       <DependentUpon>202108270822053_update course fk.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108271507337_remove relationship  bw course and user.resx">
+      <DependentUpon>202108271507337_remove relationship  bw course and user.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202108271522116_add relationship  bw course and user.resx">
+      <DependentUpon>202108271522116_add relationship  bw course and user.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
